--- a/EPL_analysis.ipynb
+++ b/EPL_analysis.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPaKT3IbHa28y9d4kjMlJ4a",
+      "authorship_tag": "ABX9TyMmWNYMtksXJTF3p1c22kMx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,7 +38,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "aZnq8-fa6LC4"
       },
@@ -67,7 +67,7 @@
         "id": "uXa947uT7otF",
         "outputId": "5ca4c7bd-381d-453c-9715-f83a6b80c3ec"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -522,7 +522,7 @@
         "id": "b4PHqcmH8K9_",
         "outputId": "e8e4a447-1d5b-4377-ceb1-63e64f266f8f"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1087,7 +1087,7 @@
         "id": "wtFRl9568XxF",
         "outputId": "4be379c7-16d2-4643-d978-633f069dea91"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1145,7 +1145,7 @@
         "id": "R-daiy028cJq",
         "outputId": "ea35ef7d-85d2-4b4b-a554-ced9212d8642"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1739,7 +1739,7 @@
         "id": "RyXh_bKiA7MM",
         "outputId": "2fb6373b-d6f7-4a92-9521-11670f2f042b"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2168,7 +2168,7 @@
       "metadata": {
         "id": "q_suajNsCfad"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2184,7 +2184,7 @@
         "id": "4xSHFsV1MWej",
         "outputId": "82c0f89c-eb56-47df-f1d0-81960bc4a106"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2595,7 +2595,7 @@
       "metadata": {
         "id": "wC3setlOMY9f"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2611,7 +2611,7 @@
         "id": "DT7Qkqj2Mhbv",
         "outputId": "4b7d5c93-2054-4e62-8756-9524ae28c596"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3184,7 +3184,7 @@
         "id": "8zcpF2TZMxZm",
         "outputId": "f4c2cd41-b76f-425f-c5c7-e45d22dd28af"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3226,7 +3226,7 @@
         "id": "Vi-MmIbhQPzI",
         "outputId": "c205849b-b20a-4de6-8126-9870cc7568ff"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3277,7 +3277,7 @@
         "id": "F4NmKWzPWs2O",
         "outputId": "6402359e-2c38-4b26-e6c4-34f5f45f974d"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3335,7 +3335,7 @@
         "id": "Kebhjso-cJ_T",
         "outputId": "812d3899-0b04-444b-8785-710be0c89892"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3395,7 +3395,7 @@
         "id": "FcMhfixcZEdm",
         "outputId": "475c0d10-1de8-4cff-fe19-f4b4e904d9c0"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3437,7 +3437,7 @@
         "id": "dX6-6mc8Zhv8",
         "outputId": "51d9ff70-cd04-4ed6-bcc9-5c6a6a55838a"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3478,7 +3478,7 @@
         "id": "6_qspC1pdwoh",
         "outputId": "ca74e5e6-b41e-44dd-ed36-a45a64eff8a9"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3495,6 +3495,8 @@
     {
       "cell_type": "code",
       "source": [
+        "#shots distance distribution by respective team\n",
+        "\n",
         "plt.figure(figsize=(12, 6))\n",
         "sns.boxplot(x='Team', y='Dist', data=df)\n",
         "plt.xticks(rotation=90)\n",
@@ -3516,7 +3518,7 @@
         "id": "pdy_B9PpeF0s",
         "outputId": "c64d3ed6-0608-4be0-9d8a-edfc92c541e9"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
